--- a/antesDePrimerParcial/codigoJournalJS/styel.css
+++ b/antesDePrimerParcial/codigoJournalJS/styel.css
@@ -48,9 +48,10 @@ z-indez:
 
 .container {
     padding: 1px 15px;
-    margin-left: 7%;
-    margin-right: 7%;
+    margin-left: auto;
+    margin-right: auto;
     position: relative;
+    max-width: 1200px;
 }
 
 .height100 {
@@ -156,6 +157,10 @@ body:after{
     align-items: center;
 }
 
+.grid-gap{
+    grid-gap:35px;
+}
+
 .section-1 .container > div{
     grid-gap: 40px;
 }
@@ -224,7 +229,7 @@ h6{
 .section-2{
     width: 100%;
     height: auto;
-    padding: 7% 0;
+    padding: 7% 1px;
 }
 
 .section-2 .img {
@@ -232,17 +237,13 @@ h6{
     background-repeat: no-repeat;
     background-clip: border-box;
     background-position: center;
-}
-
-.section-2 .grid >div{
-    width: 100%;
-    height: 193px;
-    max-width: 263px;
+    background-size: cover;
 }
 
 .img > div{
     visibility: hidden;
     padding: 0 60px;
+    height: 193px;
 }
 
 .img:hover > div{
@@ -273,9 +274,45 @@ h6{
     background-size: cover;
 }
 
-@media screen and (max-width: 1360px) {
+@media screen and (max-width: 1500px) {
     .wrapper{
         margin: 80px 90px;
         width: auto;
     }
   }
+
+  @media screen and (max-width: 1196px) {
+    .wrapper{
+        margin: 80px 50px;
+    }
+  }
+
+  @media screen and (max-width: 1125px) {
+    .section-2 .grid{
+        grid-template-columns: 1fr 1fr; 
+    }
+
+    .section-2 .container{
+        max-width: 800px;
+    }
+
+    .section-1 .grid.rows1-2{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+    }
+  }
+
+  @media screen and (max-width: 860px) {
+      .section-1{
+          
+      }
+  }
+
+
+  @media screen and (max-width: 740px) {
+      .wrapper{
+          margin: 80px 10px;
+      }
+  }
+  
