--- a/antesDePrimerParcial/codigoJournalJS/styel.css
+++ b/antesDePrimerParcial/codigoJournalJS/styel.css
@@ -303,10 +303,10 @@ h6{
     }
   }
 
-  @media screen and (max-width: 860px) {
-      .section-1{
-          
-      }
+  @media screen and (max-width: 600px) {
+    .section-2 .grid{
+        grid-template-columns: 1fr; 
+    }
   }
 
 
@@ -314,5 +314,13 @@ h6{
       .wrapper{
           margin: 80px 10px;
       }
+
+      .section-1 .grid.rows-3{
+          display: flex;
+          flex-direction: column;
+      }
+
+      .section-1 h4{
+          margin: 20px 0;
+      }
   }
-  
