--- a/antesDePrimerParcial/codigoJournalJS/styel.css
+++ b/antesDePrimerParcial/codigoJournalJS/styel.css
@@ -232,6 +232,10 @@ h6{
     padding: 7% 1px;
 }
 
+.section-2 .container{
+    max-width: 1100px;
+}
+
 .section-2 .img {
     background-image: url(img/s1.jpg);
     background-repeat: no-repeat;
@@ -293,7 +297,7 @@ h6{
     }
 
     .section-2 .container{
-        max-width: 800px;
+        max-width: 920px;
     }
 
     .section-1 .grid.rows1-2{
@@ -322,5 +326,11 @@ h6{
 
       .section-1 h4{
           margin: 20px 0;
+      }
+  }
+
+  @media screen and (max-width: 520px) {
+      .wrapper{
+          margin: 80px 0;
       }
   }
